chore(notebook): adjust spacings to avoid overflow on large screens

--- a/notebook/src/components/layout/Footer/Footer.css
+++ b/notebook/src/components/layout/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 1rem 0;
+  padding: 0 0 1rem;
 }
 
 .footer__copyright {
